abstractripper new uri instead url